--- a/app/views/feed_previews/_failed_status.html.erb
+++ b/app/views/feed_previews/_failed_status.html.erb
@@ -1,5 +1,4 @@
-<div class="alert alert-danger" role="alert">
-  <%= icon("exclamation-triangle-fill", css_class: "me-2") %>
-  <strong>Preview generation failed.</strong>
-  There was an error processing this feed. Please check the feed URL and try again.
+<div class="ff-alert ff-alert--error space-y-1" role="alert">
+  <p class="ff-text ff-text--heavy">Preview generation failed.</p>
+  <p class="ff-text">There was an error processing this feed. Double-check the feed URL and try again.</p>
 </div>
