--- a/app/views/feed_previews/_processing_status.html.erb
+++ b/app/views/feed_previews/_processing_status.html.erb
@@ -7,7 +7,7 @@
   data-feed-preview-spinner="true">
   <%= icon("loader-2", css_class: "h-5 w-5 flex-shrink-0 animate-spin text-sky-500", aria_hidden: true) %>
   <div class="space-y-1">
-    <p class="font-semibold text-slate-900">Generating preview…</p>
+    <p class="font-semibold text-slate-900">Generating preview...</p>
     <p>This usually takes a few seconds while we fetch and format this feed.</p>
   </div>
 </div>
