--- a/app/views/feed_previews/show.html.erb
+++ b/app/views/feed_previews/show.html.erb
@@ -5,10 +5,7 @@
     <div>
       <h1 class="ff-h1">Feed Preview</h1>
       <p class="ff-text mt-2">
-        Feed URL: <a href="<%= @feed_preview.url %>" target="_blank" rel="noopener" class="ff-link break-all"><%= @feed_preview.url %></a>
-      </p>
-      <p class="ff-text">
-        Feed profile: <span class="text-slate-600"><%= t("feed_profiles.#{@feed_preview.feed_profile_key}") %></span>
+        Source URL: <a href="<%= @feed_preview.url %>" target="_blank" rel="noopener" class="ff-link break-all"><%= @feed_preview.url %></a> (<%= t("feed_profiles.#{@feed_preview.feed_profile_key}") %>)
       </p>
     </div>
     <div id="header-actions" class="flex w-full items-center justify-between gap-3 sm:w-auto sm:justify-end">
